--- a/libqnotero/ui/preferences.ui
+++ b/libqnotero/ui/preferences.ui
@@ -24,7 +24,7 @@
    <item row="2" column="1">
     <widget class="QLineEdit" name="lineEditZoteroPath"/>
    </item>
-   <item row="7" column="0" colspan="4">
+   <item row="8" column="0" colspan="4">
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -90,7 +90,33 @@ p, li { white-space: pre-wrap; }
      </property>
     </widget>
    </item>
-   <item row="6" column="0" colspan="4">
+   <item row="6" column="0">
+    <widget class="QLabel" name="label_21">
+     <property name="text">
+      <string>Icon</string>
+     </property>
+    </widget>
+   </item>
+   <item row="6" column="1" colspan="3">
+    <widget class="QComboBox" name="comboBoxIcon">
+     <item>
+      <property name="text">
+       <string>Theme default</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Monochrome white</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Monochrome black</string>
+      </property>
+     </item>
+    </widget>
+   </item>
+   <item row="7" column="0" colspan="4">
     <widget class="QCheckBox" name="checkBoxAutoUpdateCheck">
      <property name="text">
       <string>Automatically check for updates on start-up</string>
