--- a/libqnotero/ui/qnotero.ui
+++ b/libqnotero/ui/qnotero.ui
@@ -104,13 +104,6 @@
      </widget>
     </item>
     <item>
-     <widget class="QLabel" name="labelNoteAvailable">
-      <property name="text">
-       <string>Right click on item to view note</string>
-      </property>
-     </widget>
-    </item>
-    <item>
      <widget class="QWidget" name="widgetNote" native="true">
       <layout class="QVBoxLayout" name="verticalLayout_2">
        <property name="leftMargin">
@@ -126,9 +119,33 @@
         <number>0</number>
        </property>
        <item>
+        <widget class="QLabel" name="labelAbstract">
+         <property name="text">
+          <string>Abstract:</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QTextBrowser" name="textAbstract">
+         <property name="acceptDrops">
+          <bool>false</bool>
+         </property>
+         <property name="textInteractionFlags">
+          <set>Qt::LinksAccessibleByKeyboard|Qt::LinksAccessibleByMouse</set>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="labelNoteAvailable">
+         <property name="text">
+          <string>Right click on item to view note</string>
+         </property>
+        </widget>
+       </item>
+       <item>
         <widget class="QLabel" name="labelNote">
          <property name="sizePolicy">
-          <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+          <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
